--- a/literatur.bib
+++ b/literatur.bib
@@ -100,3 +100,12 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   keywords={Object serialization;Domain-specific architecture;Data analytics;Apache Spark;Hardware-software co-design},
   doi={10.1109/ISCA45697.2020.00036}
 }
+
+@misc{cratesserde,
+  author = {serde contributors},
+  title = {crates.io serde},
+  year = {2024},
+  publisher = {Crates.io},
+  journal = {Crates.io},
+  url = {https://crates.io/crates/serde}
+}
