--- a/documentation/SeminarBeispiel.tex
+++ b/documentation/SeminarBeispiel.tex
@@ -336,8 +336,17 @@ Im folgenden werden die entstandenen Ergebnisse der Implementationen gegenüberg
 \subsection{Kompremierungsrate}
 
 \subsection{Ressourcenverbrauch}
+Die Ergebnisse zeigen, dass XML im Vergleich der getesteten Formate den höchsten Ressourcenverbrauch aufweist. Insbesondere bei großen Objekten ist der Speicherbedarf exorbitant: Ein 2-GB-Objekt führte zu einem Speicherverbrauch von über 32 GB in der verwendeten Implementierung, sowohl in Python als auch in Rust. Dies macht XML für speicherintensive Anwendungen unpraktisch, insbesondere in ressourcenbeschränkten Umgebungen wie Embedded-Systemen oder IoT-Geräten. JSON zeigte sich als moderat und benötigte etwa den gleichen Speicherplatz des originalen Objekts, was auf die Textstruktur des Formats zurückzuführen ist. MessagePack erwies sich als das ressourcenschonendste Format: Es war nicht nur das schnellste, sondern erzeugte auch keine signifikanten Ausschläge im Ressourcenmonitor. Damit eignet es sich hervorragend für Systeme, bei denen geringe Latenz und niedriger Speicherverbrauch essenziell sind, beispielsweise in Echtzeitanwendungen oder mobilen Geräten. Protobuf zeigte einen ähnlichen Ressourcenverbrauch wie JSON, mit einer tendenziell geringeren Speicherbelastung. Es bietet damit eine gute Balance zwischen Effizienz und Flexibilität, insbesondere in leistungsorientierten Anwendungen wie der Kommunikation zwischen Microservices.
 
 \subsection{Nutzbarkeit / Wartbarkeit}
+In Bezug auf Nutzbarkeit und Wartbarkeit erwiesen sich MessagePack und JSON als die angenehmsten Formate. Beide ermöglichen eine dynamische Serialisierung und Deserialisierung von Objekten ohne zusätzliche Konfigurationsschritte, was die Entwicklung deutlich vereinfacht. JSON bietet dabei den zusätzlichen Vorteil, dass es in nahezu allen gängigen Programmiersprachen nativ unterstützt wird, wodurch Daten direkt inspiziert und debuggt werden können. MessagePack glänzt durch seine Effizienz und Einfachheit, allerdings führt die Community-Driven-Entwicklung dazu, dass für manche Programmiersprachen mehrere Implementierungen existieren. Diese können sich in ihrer Entwicklungsgeschwindigkeit und Funktionsweise unterscheiden, was langfristig potenzielle Kompatibilitätsprobleme oder Mehraufwand bei der Auswahl einer geeigneten Implementierung bedeuten könnte.
+
+XML und Protobuf hingegen erfordern einen größeren Implementierungsaufwand. Bei XML müssen Serialisierungs- und Deserialisierungsfunktionen implementiert werden, wobei verschiedene Bibliotheken zur Verfügung stehen, die unterschiedliche Funktionalitäten und Erweiterungen bieten. Diese Fragmentierung kann in der Entwicklung zusätzliche Entscheidungen und Abwägungen erfordern. Protobuf arbeitet mit einer vorab definierten .proto-Datei, die eine klare Struktur vorgibt und die langfristige Wartbarkeit in großen Projekten verbessert. Diese Standardisierung vermeidet inkompatible Implementierungen zwischen verschiedenen Sprachen, bietet jedoch weniger Flexibilität im Vergleich zu JSON oder MessagePack. Zudem erfordert die Arbeit mit Protobuf Erfahrung im Umgang mit Schema-Design, um eine optimale Datenstruktur zu gewährleisten. Python stößt bei der Arbeit mit tief verschachtelten Strukturen an Grenzen, was den Implementierungsaufwand für generische Lösungen zusätzlich erhöht.
+
+\textbf{Langfristige Überlegungen:}
+Die langfristige Nutzbarkeit und Wartbarkeit hängen stark von der Entwicklung und Unterstützung der jeweiligen Implementierungen ab. JSON und Protobuf profitieren von ihrer langjährigen Etablierung und der breiten Unterstützung durch offizielle und gut dokumentierte Bibliotheken. MessagePack hingegen, trotz seiner Effizienz, birgt Risiken durch die Vielzahl an Community-Implementierungen, die sich unterschiedlich schnell und unabhängig voneinander weiterentwickeln können. XML, obwohl etabliert, wird durch seine vergleichsweise komplexe Handhabung und die eingeschränkte Performance zunehmend weniger attraktiv für moderne Entwicklungsprojekte.
+
+Insgesamt sind JSON und Protobuf aufgrund ihrer Standardisierung und umfassenden Unterstützung die besseren Optionen für langfristige Projekte, während MessagePack für kleinere, performancekritische Anwendungen optimal ist. XML bleibt eine Wahl für spezialisierte Anwendungsbereiche, bei denen strukturierte Validierung im Vordergrund steht.
 
 \cite{10.1145/944579.944589} kann zitiert werden das xml sehr langsam vorallem sehr schnell sehr langsam wird
 
