--- a/documentation/SeminarBeispiel.tex
+++ b/documentation/SeminarBeispiel.tex
@@ -139,7 +139,7 @@ Sie erfasst die Dauer, die erforderlich ist, um serialisierte Daten zurück in i
 Sie gibt das Verhältnis der Größe der originalen Daten zur Größe der serialisierten Daten an. Eine höhere Kompressionsrate reduziert den Speicherbedarf und die Bandbreitennutzung, was besonders in ressourcenbeschränkten Umgebungen von Vorteil ist. Die Berechnung erfolgt durch Division der Größe der ursprünglichen Daten durch die Größe der serialisierten Daten.
 
 \textbf{Implementierungsgüte}\newline
-Hierbei wird untersucht, wie die Performance der Serialisierungsverfahren in verschiedenen Programmiersprachen variiert. Unterschiede in der Implementierung können signifikante Auswirkungen auf die Effizienz haben, weshalb Tests in Sprachen wie Rust und Python aufschlussreich sind. Die Messung erfolgt durch Vergleich der gemessenen Metriken über verschiedene Implementierungen hinweg.
+Die Implementierungsgüte betrachtet, wie die Performance der Serialisierungsverfahren in unterschiedlichen Programmiersprachen variiert. Diese Messung erfolgt durch den Vergleich der ermittelten Metriken über verschiedene Implementierungen hinweg. Dabei zeigt sich, dass die Implementierungsgüte ein entscheidender Faktor ist, der nicht vernachlässigt werden darf. Wie bereits in \textit{Object serialization analysis and comparison in java and .net} \cite{10.1145/944579.944589} gezeigt, kann die gleiche Technologie in zwei vermeintlich ähnlichen Sprachumgebungen wie Java und .NET erhebliche Leistungsunterschiede aufweisen. In der dort beschriebenen Analyse performte XML in .NET je nach Objekttyp und Datengröße zwischen 65 \% und 85 \% besser als in Java. Dies verdeutlicht, wie wichtig es ist, nicht nur das Serialisierungsformat selbst, sondern auch dessen spezifische Implementierung in der Zielumgebung zu berücksichtigen.
 
 \textbf{Nutzbarkeit/Wartbarkeit}\newline
 Diese qualitative Metrik bewertet, wie einfach ein Serialisierungsverfahren zu implementieren, zu nutzen und zu warten ist. Aspekte wie Dokumentation, Community-Unterstützung und die Komplexität der Integration spielen hierbei eine Rolle. Die Bewertung erfolgt durch Experteneinschätzungen und Benutzerfeedback.
@@ -331,11 +331,16 @@ Im folgenden werden die entstandenen Ergebnisse der Implementationen gegenüberg
 
 \subsection{Serialisierung}
 
+\cite{10.1145/944579.944589} kann zitiert werden das xml sehr langsam vorallem sehr schnell sehr langsam wird
+
 \subsection{Deserialisierung}
 
 \subsection{Kompremierungsrate}
 
 \subsection{Implementierungsgüte}
+... Graphen und so als Beispiel.
+
+Man sieht auch das die Implementationsgüte durchaus wichtig zu betrachten ist. Wenn man in das Werk zur Analyisierung in Java und .NET schaut \cite{10.1145/944579.944589} kommt auch hier die Erkenntnis das die gleiche Technologie in zwei recht "ähnlichen" Sprachtypen sehr signifikante Unterschiede betreiben kann. In diesem Paper performte je nach Objekttyp und Größe XML in .NET zwischen 65\-85\% besser als in Java.
 
 \subsection{Ressourcenverbrauch}
 Die Ergebnisse zeigen, dass XML im Vergleich der getesteten Formate den höchsten Ressourcenverbrauch aufweist. Insbesondere bei großen Objekten ist der Speicherbedarf exorbitant: Ein 2-GB-Objekt führte zu einem Speicherverbrauch von über 32 GB in der verwendeten Implementierung, sowohl in Python als auch in Rust. Dies macht XML für speicherintensive Anwendungen unpraktisch, insbesondere in ressourcenbeschränkten Umgebungen wie Embedded-Systemen oder IoT-Geräten. JSON zeigte sich als moderat und benötigte etwa den gleichen Speicherplatz des originalen Objekts, was auf die Textstruktur des Formats zurückzuführen ist. MessagePack erwies sich als das ressourcenschonendste Format: Es war nicht nur das schnellste, sondern erzeugte auch keine signifikanten Ausschläge im Ressourcenmonitor. Damit eignet es sich hervorragend für Systeme, bei denen geringe Latenz und niedriger Speicherverbrauch essenziell sind, beispielsweise in Echtzeitanwendungen oder mobilen Geräten. Protobuf zeigte einen ähnlichen Ressourcenverbrauch wie JSON, mit einer tendenziell geringeren Speicherbelastung. Es bietet damit eine gute Balance zwischen Effizienz und Flexibilität, insbesondere in leistungsorientierten Anwendungen wie der Kommunikation zwischen Microservices.
@@ -350,12 +355,12 @@ Die langfristige Nutzbarkeit und Wartbarkeit hängen stark von der Entwicklung u
 
 Insgesamt sind JSON und Protobuf aufgrund ihrer Standardisierung und umfassenden Unterstützung die besseren Optionen für langfristige Projekte, während MessagePack für kleinere, performancekritische Anwendungen optimal ist. XML bleibt eine Wahl für spezialisierte Anwendungsbereiche, bei denen strukturierte Validierung im Vordergrund steht.
 
-\cite{10.1145/944579.944589} kann zitiert werden das xml sehr langsam vorallem sehr schnell sehr langsam wird
+
 
 
 \section{Fazit und Ausblick}
 
-In Zukunft wäre es möglich diese Metriken zu erweitern sowie weitere Formate hinzuzufügen als auch die selbe Umgebung in mehreren Programmiersprachen zu testen um etwaige Implementierungsunterschiede durch eine größere Menge an Daten auszumerzen.
+In Zukunft wäre es möglich diese Metriken zu erweitern sowie weitere Formate hinzuzufügen als auch die selbe Umgebung in mehreren Programmiersprachen zu testen um etwaige Implementierungsunterschiede durch eine größere Menge an Daten auszumerzen. Auch eine Aufteilung in die einzelnen Schritte eines Serialisierungs/Deserialisierungsprozess könnte interessante Erkenntnisse über etwaige Bottlenecks aufzeigen die sich in den Sprachen ergeben wie es in der bisher öfters genannten Arbeit zu den Vergleichen zwischen Java und .NET gemacht wurde \cite{10.1145/944579.944589}. 
 
 % Bibliographie entweder direkt hier eingeben (nur im Notfall)...
 %\begin{thebibliography}{9}
