--- a/literatur.bib
+++ b/literatur.bib
@@ -48,14 +48,6 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   pages={10-18},
   keywords={Protocols;Reliability;Quality of service;Cloud computing;Bandwidth;Servers;Google}}
 
-@misc{Charles2013,
-  author = {msgpack},
-  title = {msgpack},
-  year = {2010},
-  publisher = {GitHub},
-  journal = {GitHub repository},
-}
-
 @inproceedings{bhatti2000object,
   title={Object serialisation and deserialisation using xml},
   author={Bhatti, Nassem and Goff, JML and Hassan, Waseem and Kovacs, Zsolt and Martin, Peter and McClatchey, Richard and Stockinger, Heinz and Willers, Ian},
@@ -101,11 +93,47 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   doi={10.1109/ISCA45697.2020.00036}
 }
 
-@misc{cratesserde,
-  author = {serde contributors},
-  title = {crates.io serde},
-  year = {2024},
-  publisher = {Crates.io},
-  journal = {Crates.io},
-  url = {https://crates.io/crates/serde}
+@misc{serde,
+  author       = {Serde Contributors},
+  title        = {Serde: A framework for serializing and deserializing Rust data structures efficiently and generically},
+  year         = {2024},
+  publisher    = {Crates.io},
+  url          = {https://crates.io/crates/serde},
+  note         = {Accessed December 11, 2024}
+}
+
+
+@misc{msgpack,
+  author       = {Sadayuki Furuhashi},
+  title        = {MessagePack: It’s like JSON, but fast and small},
+  year         = 2023,
+  url          = {https://msgpack.org/},
+  note         = {Official Documentation, accessed December 11, 2024}
+}
+
+
+@misc{w3c_xml,
+  author       = {Tim Bray and Jean Paoli and C. M. Sperberg-McQueen and Eve Maler and François Yergeau},
+  title        = {Extensible Markup Language (XML) 1.0 (Fifth Edition)},
+  year         = 2008,
+  month        = nov,
+  url          = {https://www.w3.org/TR/REC-xml/},
+  note         = {W3C Recommendation}
+}
+
+@misc{rfc8259,
+  author       = {Tim Bray},
+  title        = {The JavaScript Object Notation (JSON) Data Interchange Format},
+  year         = 2017,
+  month        = dec,
+  url          = {https://www.rfc-editor.org/info/rfc8259},
+  note         = {RFC 8259}
+}
+
+@misc{protobuf,
+  author       = {Google LLC},
+  title        = {Protocol Buffers: A language-neutral, platform-neutral extensible mechanism for serializing structured data},
+  year         = 2023,
+  url          = {https://protobuf.dev/},
+  note         = {Official Documentation, accessed December 11, 2024}
 }
