--- a/documentation/SeminarBeispiel.tex
+++ b/documentation/SeminarBeispiel.tex
@@ -338,9 +338,23 @@ Im folgenden werden die entstandenen Ergebnisse der Implementationen gegenüberg
 \subsection{Kompremierungsrate}
 
 \subsection{Implementierungsgüte}
-... Graphen und so als Beispiel.
+Im folgenden wurden alle Messeregebnisse normalisiert und ein Durschnitt erfasst um die zwei Sprachen untereinander vergleichen zu können. Werte die größer Eins sind bedeuten das Rust hier um diesen Faktor besser performt hat.
 
-Man sieht auch das die Implementationsgüte durchaus wichtig zu betrachten ist. Wenn man in das Werk zur Analyisierung in Java und .NET schaut \cite{10.1145/944579.944589} kommt auch hier die Erkenntnis das die gleiche Technologie in zwei recht "ähnlichen" Sprachtypen sehr signifikante Unterschiede betreiben kann. In diesem Paper performte je nach Objekttyp und Größe XML in .NET zwischen 65\-85\% besser als in Java.
+\begin{table}[H]
+    \begin{tabular}{|l|l|l|l|l}
+    \cline{1-4}
+    \textbf{Protokoll} & \textbf{Serialisierung} & \textbf{Deserialisierung} & \textbf{Kompression} &  \\ \cline{1-4}
+    JSON               & 7.858018                & 4.026984                  & 0.224557               &  \\ \cline{1-4}
+    MessagePack        & 5.909328                & 2.354893                  & 0.205478               &  \\ \cline{1-4}
+    ProtoBuf           & 1.665640                & 1.915003                  & 0.106578               &  \\ \cline{1-4}
+    XML                & 10.588883               & -                         & 86.795813              &  \\ \cline{1-4}
+    \end{tabular}
+    \caption{Durschnittliche Faktoren einer Implementierung}
+\end{table}
+
+Python zeigt in der Kompression durchweg bessere Ergebnisse als Rust. Dies liegt daran, dass Python-Objekte im Speicher eine vergleichsweise große Größe aufweisen, was dazu führt, dass die Daten nach der Serialisierung stärker komprimiert erscheinen. In der Serialisierungs- und Deserialisierungsgeschwindigkeit hingegen übertrifft Rust Python deutlich. Dies ist auf die native Kompilierung von Rust und die damit verbundene Optimierung auf niedriger Ebene zurückzuführen, wodurch Serialisierungsbibliotheken effizienter arbeiten können. Die Ergebnisse verdeutlichen, dass Rust besonders in Szenarien mit hohen Anforderungen an die Verarbeitungsgeschwindigkeit Vorteile bietet, während Python durch seine Speicherrepräsentation eine effektivere Kompression erreicht.
+
+Generell zeigt sich aber auch eine Schwankung die zeigt das Rust nicht durchgängig um ein Vielfaches besser dasteht. Vergleicht man gerade ProtoBuf das nur doppelt so schnell Serialisiert und Deserialisiert im Schnitt gegen z.B JSON und XML die um einen Faktor 7 nd 10 schneller sind sieht man dies deutlich.
 
 \subsection{Ressourcenverbrauch}
 Die Ergebnisse zeigen, dass XML im Vergleich der getesteten Formate den höchsten Ressourcenverbrauch aufweist. Insbesondere bei großen Objekten ist der Speicherbedarf exorbitant: Ein 2-GB-Objekt führte zu einem Speicherverbrauch von über 32 GB in der verwendeten Implementierung, sowohl in Python als auch in Rust. Dies macht XML für speicherintensive Anwendungen unpraktisch, insbesondere in ressourcenbeschränkten Umgebungen wie Embedded-Systemen oder IoT-Geräten. JSON zeigte sich als moderat und benötigte etwa den gleichen Speicherplatz des originalen Objekts, was auf die Textstruktur des Formats zurückzuführen ist. MessagePack erwies sich als das ressourcenschonendste Format: Es war nicht nur das schnellste, sondern erzeugte auch keine signifikanten Ausschläge im Ressourcenmonitor. Damit eignet es sich hervorragend für Systeme, bei denen geringe Latenz und niedriger Speicherverbrauch essenziell sind, beispielsweise in Echtzeitanwendungen oder mobilen Geräten. Protobuf zeigte einen ähnlichen Ressourcenverbrauch wie JSON, mit einer tendenziell geringeren Speicherbelastung. Es bietet damit eine gute Balance zwischen Effizienz und Flexibilität, insbesondere in leistungsorientierten Anwendungen wie der Kommunikation zwischen Microservices.
