--- a/literatur.bib
+++ b/literatur.bib
@@ -137,3 +137,5 @@ keywords = {.NET, Binary, Java, Serialization, XML}
   url          = {https://protobuf.dev/},
   note         = {Official Documentation, accessed December 11, 2024}
 }
+
+@misc{Pommerenig_2019, title={Mythos oder Wahrheit: Allheilmittel XML: Public magazin}, url={https://www.msg.group/public-magazin-beitrag/mythos-oder-wahrheit-allheilmittel-xml?utm_source=chatgpt.com}, journal={Mythos oder WahrheIT: Allheilmittel XML}, author={Pommerenig, Tim}, year={2019}, month={Mar}} 
